[project]
name = "oa-cohort-author"
version = "0.1.0"
description = "Stable authoring service layer for oa-cohorts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "oa-cohorts>=0.4.1",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
